--- a/brave-asynchttpclient/brave-asynchttpclient-2.x/pom.xml
+++ b/brave-asynchttpclient/brave-asynchttpclient-2.x/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>smartthings.brave</groupId>
         <artifactId>smartthings-brave-asynchttpclient-parent</artifactId>
-        <version>0.1.7-SNAPSHOT</version>
+        <version>0.1.9-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -45,9 +45,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>smartthings.brave</groupId>
-            <artifactId>brave-asynchttpclient-common</artifactId>
-            <version>0.1.7-SNAPSHOT</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>smartthings-brave-asynchttpclient-common</artifactId>
+            <version>0.1.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.asynchttpclient</groupId>
