--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     <main.basedir>${project.basedir}</main.basedir>
     <zipkin.version>1.26.1</zipkin.version>
     <brave.version>4.3.4</brave.version>
-    <brave-cassandra.version>0.1.0</brave-cassandra.version>
+    <brave-cassandra.version>0.1.1</brave-cassandra.version>
     <cassandra-driver.version>3.2.0</cassandra-driver.version>
     <log4j.version>2.3</log4j.version>
     <httpcomponents.version>4.4.1</httpcomponents.version>
@@ -96,7 +96,7 @@
     <module>brave-asynchttpclient</module>
     <module>brave-kafka</module>
     <module>brave-http-common</module>
-    <!--<module>brave-cassandra-common</module>-->
+    <module>brave-cassandra-common</module>
   </modules>
 
   <distributionManagement>
