--- a/brave-http-common/pom.xml
+++ b/brave-http-common/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>brave-instrumentation-http</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
