--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
     <module>brave-kafka</module>
     <module>brave-http-common</module>
     <module>brave-cassandra-common</module>
+    <module>brave-sqs</module>
   </modules>
 
   <distributionManagement>
@@ -195,7 +196,13 @@
       <dependency>
         <groupId>com.google.auto.value</groupId>
         <artifactId>auto-value</artifactId>
-        <version>1.1</version>
+        <version>1.4.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>1.3.9</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
@@ -285,6 +292,9 @@
           <target>1.8</target>
           <optimize>true</optimize>
           <debug>true</debug>
+          <annotationProcessors>
+            <annotationProcessor>com.google.auto.value.processor.AutoValueProcessor</annotationProcessor>
+          </annotationProcessors>
         </configuration>
         <executions>
           <execution>
@@ -321,7 +331,7 @@
       <plugin>
         <groupId>net.orfjackal.retrolambda</groupId>
         <artifactId>retrolambda-maven-plugin</artifactId>
-        <version>2.3.0</version>
+        <version>2.5.1</version>
         <executions>
           <execution>
             <goals>
