--- a/brave-sqs/pom.xml
+++ b/brave-sqs/pom.xml
@@ -61,6 +61,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>io.zipkin.brave</groupId>
+      <artifactId>brave-tests</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.elasticmq</groupId>
       <artifactId>elasticmq-server_2.11</artifactId>
       <version>0.13.2</version>
