--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
         <version>${brave.version}</version>
       </dependency>
       <dependency>
+        <groupId>io.zipkin.brave</groupId>
+        <artifactId>brave-tests</artifactId>
+        <version>${brave.version}</version>
+      </dependency>
+      <dependency>
         <groupId>io.zipkin.zipkin2</groupId>
         <artifactId>zipkin</artifactId>
         <version>${zipkin.version}</version>
@@ -196,7 +201,7 @@
       <dependency>
         <groupId>com.google.auto.value</groupId>
         <artifactId>auto-value</artifactId>
-        <version>1.4.1</version>
+        <version>1.5</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
