Added support for tracing via SNS message attributes

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
     <module>brave-http-common</module>
     <module>brave-cassandra-common</module>
     <module>brave-sqs</module>
+    <module>brave-sns</module>
   </modules>
 
   <distributionManagement>
