--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <main.basedir>${project.basedir}</main.basedir>
-    <zipkin.version>2.0.0</zipkin.version>
-    <brave.version>4.8.0</brave.version>
-    <brave-cassandra.version>0.3.0</brave-cassandra.version>
+    <zipkin.version>2.4.5</zipkin.version>
+    <brave.version>4.14.1</brave.version>
+    <brave-cassandra.version>0.4.0</brave-cassandra.version>
     <cassandra-driver.version>3.2.0</cassandra-driver.version>
     <log4j.version>2.3</log4j.version>
     <httpcomponents.version>4.4.1</httpcomponents.version>
@@ -158,6 +158,11 @@
       </dependency>
       <dependency>
         <groupId>io.zipkin.zipkin2</groupId>
+        <artifactId>zipkin</artifactId>
+        <version>${zipkin.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.zipkin.java</groupId>
         <artifactId>zipkin</artifactId>
         <version>${zipkin.version}</version>
       </dependency>
